Dev Main/src/objects/Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name &amp; &apos; is the name of the Account&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Test Objects</relationshipLabel>
        <relationshipName>Test_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRN__c</fullName>
        <label>MRN</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>01-Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02-Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-Mar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Test Objects</relationshipLabel>
        <relationshipName>Test_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_formula_2__c</fullName>
        <formula>test_date_formula__c + 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>date formula 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test_autonumber__c</fullName>
        <displayFormat>A-{00000}</displayFormat>
        <label>test autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>test_date__c</fullName>
        <label>test date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test_date_formula__c</fullName>
        <formula>DATE( VALUE(TEXT(Year__c)), VALUE(left(TEXT(Month__c),2)) , 01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test date formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testflag__c</fullName>
        <formula>if( year(datevalue(CreatedDate)) = year(today()),
  &apos;YTD&apos;,
  &apos;PAST&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testflag</label>
        <type>Text</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TEST-{00000}</displayFormat>
        <label>Test Object Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>